Update and rename ssh.add.bash to ssh.addkeys.rc

--- a/.wsl.extend/ssh.addkeys.rc
+++ b/.wsl.extend/ssh.addkeys.rc
@@ -1,4 +1,4 @@
-# WSL SSH autoadd keys
+# WSL: Add SSH keys automatically
 if ! ssh-add -l >/dev/null 2>&1; then
   eval "$(ssh-agent -s)" >/dev/null
 fi
